CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.December.5 (0.9.15)
  * Tinter now 2x to 4x faster.
    Albert Cahalan <albert@users.sf.net>

  * Sorry about that leak. Many MB per stamp and nobody complained???
    Albert Cahalan <albert@users.sf.net>

  * Greatly improved stamp outlining (to avoid empty rows or columns
    and other artifacts) by using a thick stippled pattern.
    Albert Cahalan <albert@users.sf.net>

  * Stamp tinting code changed.  Stamp ".dat" files may include
    "tinter=anyhue", "tinter=narrow", "tinter=normal" or "tinter=vector",
    describing how the contents of the stamp should be tinted. (See README)
    Albert Cahalan <albert@users.sf.net>

  * Added "scale" keyword (in stamp ".dat" files) for high-resolution stamp
    images.
    Albert Cahalan <albert@users.sf.net>

  * Arbitrary window sizes allowed (--XXXXxYYYY); useful for more modern
    displays (e.g., Mac monitors)
    Albert Cahalan <albert@users.sf.net>

  * abstracted stamp scaling (prep for large sizes)
    Per-stamp sane scaling range enforced. (generally bigger)
    Albert Cahalan <albert@users.sf.net>

  * Simplified strip_trailing_whitespace() function; now O(n)
    Albert Cahalan <albert@users.sf.net>

  * drawtext_callback() prototype forces useless arg.; voided it
    Albert Cahalan <albert@users.sf.net>

  * Enabled more compiler warnings, and updated code to prevent them.
    Albert Cahalan <albert@users.sf.net>
    Bill Kendrick <bill@newbreedsoftware.com>

  * Updated Hebrew translation.
    Dovix <dovix2003@yahoo.com>

  * Increased maximum number of stamps that can be loaded at once from
    256 to 512.
    Albert Cahalan <albert@users.sourceforge.net>

  * Switched from using 16bpp display surfaces to 32bpp, to reduce
    discoloration. ("#define" options exist at the top of src/tuxpaint.c