@@ -8,6 +8,9 @@ http://www.newbreedsoftware.com/tuxpaint/
 
 
 2004.December.5 (0.9.15)
+  * More range for stamp sizes. Can't hang off edge in both dimensions.
+    Albert Cahalan <albert@users.sf.net>
+
   * Tinter now 2x to 4x faster.
     Albert Cahalan <albert@users.sf.net>
 
